add amo employee synchronization
